@@ -4,6 +4,7 @@
 * Important bug fixed in RTreeLikelihood: derivatives are correct when nodes
   id are not reset.
 * Important bug fixed in substitution mapping.
+* Bug fixed in substitution models with frequency parameters (init from data) !
 
 06/07/07 -*- Version 1.5.0. -*-
 
